manifests/network-policy-all-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
          namespaceSelector:
            matchLabels:
              name: ui
        # - namespaceSelector:
        #     matchLabels:
        #       network-policy: global
      ports:
        - protocol: TCP
          port: 8080


# spec:
#   podSelector: {}
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               network-policy: global
#   policyTypes:
#     - Ingress
